# rendering_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: app.cpp  settings_parser.cpp
app/include/: app.hpp  settings_parser.hpp
